# SDL_Pong

./: CMakeLists.txt  Makefile  README.md
src/: ball.cpp  ball.hpp  ltexture.cpp  ltexture.hpp  main.cpp  main.hpp  paddle.cpp  paddle.hpp  sdlapp.cpp  sdlapp.hpp
